fix: change light mode css to dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ li {
   padding: 4px;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
     background-color: #ffffff;
